--- a/Promotion/Style.css
+++ b/Promotion/Style.css
@@ -727,7 +727,7 @@ body {
 
 }
 footer{
-    background-image: url(Images/discount.png);
+    background-image: url(images/discount.png);
 	background-attachment: fixed;
 	background-size: cover;
     background-repeat: no-repeat;
